# rl-inference-autoscaler

./: .gitignore  GITHUB_PAGES_SETUP.md  README.md  eval.json  index.html  main.py  project_goal.md  pyproject.toml  train.py  train_dqn.py
.github/workflows/: deploy-website.yml
_astro/: BlogHeader.BYxEb12_.js  ParetoExplorer.CWuOnhmo.js  PolicyComparisonChart.DMKMIJ_-.js  RewardTradeoff.D59kXqq7.js  ScalingTimeline.Bd815gL7.js  TableOfContents.CxfRBQp1.js  dataUrl.BggbjSeN.js  index.B_LzIFCq.css  theme.L73IpSzo.js
data/: traffic_trace.csv
project_info/: best_run.md  experiments_backlog.md  phase1.md  phase2.md  project_goal.md
results/: README.md  analysis.html  benchmark_full.json  benchmark_summary.json  sweep_results_table.json
results/experiments/: a10_rl_seeds.json  a10_seed_sensitivity.json  a5_ppo_new_stack.json  a6_alternatives.json  a8_a9_modal.json  b2_fixed_replica_sweep.json  b3_oracle_gap.json  b4_action_distribution.json  b5_extended_benchmark.json  index.json  p2_mlflow_summary.json  r1_reward_sweep.json  r2_r3_presets.json  r4_churn_eval.json  r6_util_band.json  t2_csv_benchmark.json  t2_multi_seed.json  t3_held_out.json  t4_production_trace.json  t5_spike_stress.json  t6_multi_trajectory.json  t6_plot_trajectories.json  (+1 more)
scripts/: complete_backlog.py  generate_analysis_html.py  generate_results_plots.py  generate_traffic_trace.py  run_eval.py  run_prephase3_experiments.py
tests/: test_autoscaler_env.py  test_baselines_extended.py  test_train_infra.py
website/: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
(+65 files in other folders)
