[project]
name = "rl-inference-autoscaler"
version = "0.1.0"
description = "RL-based inference autoscaler simulator and Ray/Modal PPO/DQN training"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.2.2,<1.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=2.2,<3",
]

[project.optional-dependencies]
train = [
    "ray[rllib]>=2.54.0",
    "torch>=2.0.0",
    "mlflow>=2.0.0",
]
modal = [
    "modal>=0.73.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
train-ray = "rl_inference_autoscaler.train_ray:main"
train-dqn = "rl_inference_autoscaler.train_dqn_ray:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = true
